@@ -60,6 +60,10 @@
 				<version>0.0.8</version>
 				<configuration>
 					<mainClass>main.Main</mainClass>
+					<options>
+						<option>--add-exports</option>
+						<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+					</options>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -111,12 +115,12 @@
 							<includes>.*</includes>
 							<inputSchema>${db.name}</inputSchema>
 							<forcedTypes>
-								<forcedType>
-									<name>BOOLEAN</name>
-									<includeExpression>.*\.storniert</includeExpression>
-									<includeTypes>.*</includeTypes>
-									<objectType>ALL</objectType>
-								</forcedType>
+							<forcedType>
+								<name>BOOLEAN</name>
+								<includeExpression>.*\.storniert</includeExpression>
+								<includeTypes>.*</includeTypes>
+								<objectType>ALL</objectType>
+							</forcedType>
 							</forcedTypes>
 						</database>
 						<target>
@@ -193,6 +197,11 @@
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq-codegen</artifactId>
 			<version>${jooq.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>11.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
